test/good/automatic/base/without_input/ret_zero/0046.lat
// official test 25
int main() {
  printInt(2*-2); return 0;
}
