test/bad/automatic/base/compile_time/0037.lat
int main() {
    string i;
    -i;
    return 0;
}